fix mobile grid overflow

--- a/src/index.css
+++ b/src/index.css
@@ -113,6 +113,8 @@ body {
   display: grid;
   height: 750px;
   width: 750px;
+  justify-content: center;
+  align-content: center;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   gap: 20px;
